--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             if (解析方式 === "xmflv") {
                 目标链接 = "https://jx.xmflv.com/?url=" + 视频链接;
             } else if (解析方式 === "im1907") {
-                目标链接 = "https://im1907.top/?jx=" + 视频链接;
+                目标链接 = "https://z1.m1907.top/?jx=" + 视频链接;
             }
 
             if (视频链接) {
